--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
+/* Header Styling */
+/* header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  align-items: center;
+  max-width: 1200px;
+  margin: auto;
+  border-bottom: 1px solid ;
+  font-size: 18px;
+  padding: 0px 10px;
+} */
+.headerContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  margin: auto;
+  background-color: rgba(1, 60, 174, 1);
+ 
+}
+/* Logo Styling */
+.logoSection{
+  width: 15%;
+  height: 40px;
+  margin-top: 20px;
+  padding: 30px;
+  
+}
+
+.navSection{
+  padding: 40px;
+}
+.navItem {
+  margin: 10px;
+}
+
+.Intro{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100px 200px 200px;
+  gap: 10px
+}
+.IntroWriteup{
+  text-align: center;
+  /* margin-top: 72px; */
+}
+.IntroWriteup p{
+  color: #FFDC4B;
+  margin: 0px 0px 20px;
+  font: 19px;
+}
+.showCaseContainer{
+  width: 100%;
+  height: 500px;
+  margin: 4px;
+  background-image: url("./assets/images/bg/oil-refinery-plant-.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.showCaseContainer h1{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.showCaseContainer h1, p{
+  text-align: center;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.footer{
+background-color: rgba(255, 255, 255, 255);
+text-align: center;
+padding: 32px;
+height: 100px;
+}
+.footerNav{
+  padding-top: 32px;
 }
