--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
+* {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0px;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 255);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #012B7F;
 }
+main {
+  min-height: 100%;
+  margin-bottom: -100px;
+  /* background: #ddd; */
+}
+
+main:after {
+  content: "";
+  display: block;
+  height: 100px;
+}
+
+@media (min-width: 800) {
+  .logoSection{
+      font-size: 16px;
+  }
+
+}
+
