--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,13 @@
   padding: 30px;
   
 }
+@media (max-width: 680px) {
+  .logoSection {
+    font-size: 16px;
+    display: none;
+  }
+
+}
 
 .navSection{
   padding: 40px;
@@ -38,55 +45,80 @@
 }
 
 .Intro{
-  display: grid;
+  /* display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 100px 200px 200px;
-  gap: 10px
+  gap: 10px */
+  display: flex;
+  gap: 50px;
 }
 .IntroWriteup{
-  text-align: center;
-  /* margin-top: 72px; */
+  text-align: left;
+  margin-top: 72px;
 }
 .IntroWriteup p{
   color: #FFDC4B;
   margin: 0px 0px 20px;
   font: 19px;
+  padding: 32px;
 }
 .showCaseContainer{
-  width: 100%;
+  width: 50%;
   height: 500px;
-  margin: 4px;
   background-image: url("./assets/images/bg/oil-refinery-plant-.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
-.showCaseContainer h1{
+.ContactContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  gap: 2rem;
+  background-color:#fff;
+  border: 1px solid;
+ 
+}
+.ProductDetail{
+  flex: 1;
+  max-width: 400px;
+  padding: 20px;
+}
+.ProductDetail h1{
+  color: #000;
+}
+.ProductDetail>p{
+  color: #000;
+  padding-top: 20px;
+  line-height: 1.5rem;
+}
+.caption{
+  text-align: center;
+  padding: 32px;
+}
+.AboutUsContainer{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+  width: 100%;
+  height: 100vh;
+}
+.AboutUsContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+}
+  
+/* .showCaseContainer h1{
   text-align: center;
 }
 .showCaseContainer h1, p{
   text-align: center;
   padding: 20px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+} */
 
 
 
@@ -96,6 +128,12 @@ text-align: center;
 padding: 32px;
 height: 100px;
 }
+.footer>p>.copyRight {
+  color: #FFDC4B;
+}
 .footerNav{
   padding-top: 32px;
+}
+.footerNav>.navItem{
+  color: #FFDC4B;
 }
