--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 } */
 .headerContainer {
   display: flex;
+  position: fixed;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -29,13 +30,40 @@
   padding: 30px;
   
 }
-@media (max-width: 680px) {
+@media (max-width: 600px) {
   .logoSection {
     font-size: 16px;
     display: none;
   }
+  .Intro{
+    flex-direction: column;
+    padding: 0;
+  }
+    .Intro-Item {
+      flex: 1 1 calc(50% - 20px);
+        font-size: 1.12rem;
+        padding: 0;
+     }
+  .Intro-Item img{
+    width: 100%;
+    height: 100%;
+   
+  }
+ 
+  .ContactContainer {
+    flex-direction: column ;
+    
+  }
+  .ProductDetail{
+    flex: 1 1 calc(50% - 20px) ;
+    font-size: 1.12rem;
+  }
+  .AbPage{
+    flex-direction: column;
+  }
 
 }
+
 
 .navSection{
   padding: 40px;
@@ -45,45 +73,49 @@
 }
 
 .Intro{
-  /* display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 100px 200px 200px;
-  gap: 10px */
   display: flex;
-  gap: 50px;
+  justify-content: flex-start;
+  height: 50vh;
+  gap: 2rem;
+  margin: 50px auto;
+}
+.Intro-Item{
+  flex: 1;
+  padding: 50px;
 }
 .IntroWriteup{
-  text-align: left;
-  margin-top: 72px;
+  text-align: center;
 }
 .IntroWriteup p{
   color: #FFDC4B;
-  margin: 0px 0px 20px;
-  font: 19px;
-  padding: 32px;
+  font-size: 19px;
+  font-weight: bolder;
+  /* margin: 30px; */
+ 
 }
-.showCaseContainer{
+/* .showCaseContainer{
   width: 50%;
   height: 500px;
   background-image: url("./assets/images/bg/oil-refinery-plant-.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-}
+} */
 .ContactContainer{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50vh;
   gap: 2rem;
   background-color:#fff;
   border: 1px solid;
+  padding: 15px;
  
 }
 .ProductDetail{
   flex: 1;
   max-width: 400px;
   padding: 20px;
+  margin-bottom: 50px;
 }
 .ProductDetail h1{
   color: #000;
@@ -92,35 +124,85 @@
   color: #000;
   padding-top: 20px;
   line-height: 1.5rem;
+  
+}
+.homeProductImg {
+  border-radius: 5px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .16);
+  margin: 10px; 
+  padding: 10px;
+}
+.homeProductImg img{
+  height: 250px;
+  max-width: 100%;
 }
 .caption{
   text-align: center;
-  padding: 32px;
+  padding-top: 12px;
+  padding-bottom: 5px;
 }
 .AboutUsContainer{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto minmax(200px, 500px);
   grid-template-rows: repeat(4, 1fr);
+  grid-auto-rows: 50px;
   gap: 10px;
-  width: 100%;
-  height: 100vh;
+  /* width: 100%; */
+  
 }
 .AboutUsContent {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 16px;
+  padding: 10px;
+}
+.AboutUsContent img{
+  height: 250px;
+  max-width: 100%;
+  padding: 50px;
 }
   
-/* .showCaseContainer h1{
+.AbPage{
+  display: flex;
+  gap: 50px;
+  height: 100vh;
+}
+.AbContent{
+  flex: 1;
+  max-width: 400px;
+  padding: 20px;
+  margin: 50px;
+}
+.AbContent h2{
+  font-size: 12px;
+}
+
+.productSection{
+  margin: 50px;
+  padding-top: 50px;
   text-align: center;
 }
-.showCaseContainer h1, p{
-  text-align: center;
-  padding: 20px;
-} */
-
-
+.products{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 30px 0;
+}
+.product {
+  border-radius: 5px;
+  box-shadow: 0 1px 4px rgba(0,0,0,.16);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 10px;
+  padding: 10px;
+  width: 350px;
+}
+.product img{
+  height: 250px;
+  max-width: 100%;
+}
 
 .footer{
 background-color: rgba(255, 255, 255, 255);
