--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 * {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 0px;
+  padding: 0;
   text-decoration: none;
   color: rgba(255, 255, 255, 255);
 }
@@ -14,16 +14,12 @@ body {
   background-color: #012B7F;
 }
 main {
-  min-height: 100%;
-  margin-bottom: -100px;
-  /* background: #ddd; */
+ margin: auto;
+ max-width: 1280px;
+ min-height: 100vh;
+ padding: 5px;
 }
 
-main:after {
-  content: "";
-  display: block;
-  height: 100px;
-}
 
 
 
