--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,10 @@
-/* Header Styling */
-/* header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 50px;
-  align-items: center;
-  max-width: 1200px;
-  margin: auto;
-  border-bottom: 1px solid ;
-  font-size: 18px;
-  padding: 0px 10px;
-} */
-.headerContainer {
-  display: flex;
-  position: fixed;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 80px;
-  margin: auto;
-  background-color: rgba(1, 60, 174, 1);
- 
-}
-/* Logo Styling */
-.logoSection{
-  width: 15%;
-  height: 40px;
-  margin-top: 20px;
-  padding: 30px;
-  
-}
+
+
 @media (max-width: 600px) {
-  .logoSection {
-    font-size: 16px;
-    display: none;
+.navItem {
+    margin: 12px;
   }
-  .Intro{
-    flex-direction: column;
-    padding: 0;
-  }
-    .Intro-Item {
-      flex: 1 1 calc(50% - 20px);
-        font-size: 1.12rem;
-        padding: 0;
-     }
-  .Intro-Item img{
-    width: 100%;
-    height: 100%;
-   
-  }
+ 
  
   .ContactContainer {
     flex-direction: column ;
@@ -58,9 +14,7 @@
     flex: 1 1 calc(50% - 20px) ;
     font-size: 1.12rem;
   }
-  .AbPage{
-    flex-direction: column;
-  }
+ 
 
 }
 
@@ -69,45 +23,17 @@
   padding: 40px;
 }
 .navItem {
-  margin: 10px;
+  margin: 32px;
 }
 
-.Intro{
-  display: flex;
-  justify-content: flex-start;
-  height: 50vh;
-  gap: 2rem;
-  margin: 50px auto;
-}
-.Intro-Item{
-  flex: 1;
-  padding: 50px;
-}
-.IntroWriteup{
-  text-align: center;
-}
-.IntroWriteup p{
-  color: #FFDC4B;
-  font-size: 19px;
-  font-weight: bolder;
-  /* margin: 30px; */
- 
-}
-/* .showCaseContainer{
-  width: 50%;
-  height: 500px;
-  background-image: url("./assets/images/bg/oil-refinery-plant-.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-} */
 .ContactContainer{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   gap: 2rem;
   background-color:#fff;
   border: 1px solid;
+  border-radius: 5px;
   padding: 15px;
  
 }
@@ -115,7 +41,8 @@
   flex: 1;
   max-width: 400px;
   padding: 20px;
-  margin-bottom: 50px;
+  margin: 50px;
+  box-sizing: border-box;
 }
 .ProductDetail h1{
   color: #000;
@@ -137,9 +64,9 @@
   max-width: 100%;
 }
 .caption{
+  padding: 60px 20px;
   text-align: center;
-  padding-top: 12px;
-  padding-bottom: 5px;
+  
 }
 .AboutUsContainer{
   display: grid;
@@ -163,20 +90,6 @@
   padding: 50px;
 }
   
-.AbPage{
-  display: flex;
-  gap: 50px;
-  height: 100vh;
-}
-.AbContent{
-  flex: 1;
-  max-width: 400px;
-  padding: 20px;
-  margin: 50px;
-}
-.AbContent h2{
-  font-size: 12px;
-}
 
 .productSection{
   margin: 50px;
