--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,11 @@
   font-size: 16px;
   padding: 10px;
 }
+.AboutUsContent p{
+  text-align: left;
+  flex: 1;
+  padding: 5px;
+}
 .AboutUsContent img{
   height: 250px;
   max-width: 100%;
