--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@
   grid-template-columns: auto minmax(200px, 500px);
   grid-template-rows: repeat(4, 1fr);
   grid-auto-rows: 50px;
-  gap: 10px;
+  gap: 1px;
   /* width: 100%; */
   
 }
@@ -82,17 +82,17 @@
   justify-content: center;
   align-items: center;
   font-size: 16px;
-  padding: 10px;
+  /* padding: 10px; */
 }
 .AboutUsContent p{
   text-align: left;
   flex: 1;
-  padding: 5px;
+  padding: 3px;
 }
 .AboutUsContent img{
   height: 250px;
   max-width: 100%;
-  padding: 50px;
+  padding: 30px;
 }
   
 
@@ -126,7 +126,7 @@
 background-color: rgba(255, 255, 255, 255);
 text-align: center;
 padding: 32px;
-height: 100px;
+/* height: 100px; */
 }
 .footer>p>.copyRight {
   color: #FFDC4B;
